Errors and readme addition

--- a/Readme
+++ b/Readme
@@ -1,3 +1,9 @@
 Репозиторий с вариантами решения задач.
 Номера задач совпадают с номерами папок с решениями.
 Т.к. имеются плавающие моменты в условиях, были реализованы элементы ввода через консоль в первых задачах.
+В первой задаче генерация идет от [0,1) в go не нашел возможности без костылей включить 1 в перебор генерацией. Также на всякий вывел ошибку при невалидном вводе длины массива.
+Во 2й задаче берутся любые слова, введёные пользователем и чистятся разделители,регистр приведен к одному, т.е. А и а - считаем как тот же символ 
+далее проверяются повторяющиеся символы. Даже пробелы между словами.
+В 3й задаче ввод нижним регистром учитывается для удобства пользователя.
+В 4й задаче сделана проверка на ввод валидных значений: часы от 0 до 12, минуты от 0 до 59. НО в методе перевода в градусы сделано дополнение в виде остатка от деления 
+%12 в качестве дополнительного фильтра 24 часового формата, например, чтобы угол был валиден. Без остатка тоже будет работать.
